@@ -130,6 +130,8 @@ Small features:
   * Add STARPU_SIMGRID_TASK_PUSH_COST environment variable.
   * Add starpu_memory_nodes_get_count_by_kind and
     starpu_memory_node_get_ids_by_type.
+  * Add STARPU_MPI_REDUX_ARITY_THRESHOLD to tune the type of tree used in
+    distributed-memory reduction patterns that are automatically detected.
 
 Changes:
   * The redux codelet should expose the STARPU_COMMUTE flag, since StarPU
@@ -161,6 +163,8 @@ Small changes:
     unsigned to int, to explicit that it may be -1.
   * Value 0 for STARPU_MPI_NDETACHED_SEND and STARPU_MPI_NREADY_PROCESS will
     now disable their behaviour.
+  * Distributed-memory reduction patterns are automatically wrapped-up if the user
+    do not call starpu_mpi_redux_data()
 
 StarPU 1.3.10
 ====================================================================
